feat: remove app.component.spec.ts and add new components for barber services, client views, and dashboard features
- Deleted app.component.spec.ts file.
- Updated app.component.ts to include MenuHeaderComponent, MenuFooterComponent, and MainComponent.
- Added global styles in styles.scss for typography and color variables.
- Created new components: BarberserviceViewComponent, ClientViewComponent, AgendaViewComponent, CalendarCardComponent, MinCardComponent, MenuHeaderComponent, MenuFooterComponent, PaymentViewComponent, ClientFormComponent, ClientRegisterComponent, ScheduleViewComponent, SettingsPageComponent, and TabsComponent.
- Implemented HTML and SCSS for new components, including layout and styling.
- Introduced models for BarberService, Client, Payment, Schedule, and WorkingDays.
- Updated environment files for development and production settings.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
+
+:root {
+  --cor-principal: white;
+  --cor-secundaria: #191a1a;
+  --cor-terciaria: #dddddd;
+  --cor-letra2: #888888;
+  --font-principal: "Roboto", sans-serif;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  font-family: var(--font-principal);
+  color: var(--cor-secundaria);
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  background-color: var(--cor-principal);
+  margin: 10px;
+}
+
+
