feat: update styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-main></app-main>
-<app-menu-footer></app-menu-footer>
+
+  <app-menu-header [pageTitle]="'Barber Shop'"></app-menu-header>
+  <app-main></app-main>
+  <app-menu-footer></app-menu-footer>
+
