--- a/src/app/components/dashboard/calendar-card/calendar-card.component.html
+++ b/src/app/components/dashboard/calendar-card/calendar-card.component.html
@@ -1,13 +1,5 @@
-<div class="month-calendar">
-  <div class="calendar">
-    <mat-card class="demo-inline-calendar-card">
-      <mat-calendar [(selected)]="selected"></mat-calendar>
-    </mat-card>
-    <p>Selected date: {{ selected() }}</p>
-  </div>
-  <div class="sumary">
-    <p>Curent date</p>
-    <p>Next client</p>
-    <p>Unaviable</p>
-  </div>
+<div id="month-calendar">
+  <mat-card class="calendar-card">
+    <mat-calendar [(selected)]="selected"></mat-calendar>
+  </mat-card>
 </div>
