--- a/src/app/components/dashboard/min-card/min-card.component.html
+++ b/src/app/components/dashboard/min-card/min-card.component.html
@@ -1,4 +1,4 @@
-<div class="min-card">
+<div class="min-card-schedule">
   <h2>Next client</h2>
   <div class="next-schedule">
     <div class="next-schedule-data">
