--- a/src/app/components/dashboard/min-card/min-card.component.scss
+++ b/src/app/components/dashboard/min-card/min-card.component.scss
@@ -1,10 +1,10 @@
-.min-card {
+.min-card-schedule {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.min-card h2 {
+.min-card-schedule h2 {
   margin: 5px;
   padding-left: 3px;
   font-size: 0.8rem;
@@ -34,6 +34,7 @@
   grid-template-rows: 1fr 1fr;
   row-gap: 0.25rem;
   color: var(--cor-secundaria);
+  text-decoration: none;
 }
 
 .next-schedule-data a p {
@@ -52,14 +53,15 @@
   column-gap: 1rem;
 }
 
-.min-card .options-schedule ul li a {
+.options-schedule ul li a {
   padding-right: 0.4rem;
   font-size: 14px;
   align-content: center;
   border: 1px solid transparent;
+  text-decoration: none;
 }
 
-.min-card .options-schedule ul .schedule-bar a {
+.options-schedule ul .schedule-bar a {
   border-right-color: var(--cor-terciaria);
   border-style: solid;
   border-right-width: 1px;
