--- a/src/app/components/menu-header/menu-header.component.scss
+++ b/src/app/components/menu-header/menu-header.component.scss
@@ -1,4 +1,4 @@
-header .title {
+.title {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -10,7 +10,7 @@ header .title {
   border-color: var(--cor-terciaria);
 }
 
-header .title h1 {
+.title h1 {
   font-size: 1rem;
   font-weight: bold;
 }
