--- a/src/app/components/dashboard/agenda-view/agenda-view.component.html
+++ b/src/app/components/dashboard/agenda-view/agenda-view.component.html
@@ -1,27 +1,12 @@
 <div class="hour-bar">
   <div class="circle"></div>
 </div>
-<table class="table table-hover">
+
+<table>
   <tbody>
+    @for (hour of hours; track $index) {
     <tr>
-      <th class="hour" scope="row">12PM</th>
-      <td>
-        <ol class="event-details">
-          <li>
-            <h4>Client Name</h4>
-            <p>Service Details</p>
-            <p>12AM - 12:30PM</p>
-          </li>
-          <li>
-            <h4>Client Name</h4>
-            <p>Service Details</p>
-            <p>12:30AM - 1PM</p>
-          </li>
-        </ol>
-      </td>
-    </tr>
-    <tr>
-      <th scope="row" class="hour">1PM</th>
+      <th class="hour" scope="row">{{ hour }}</th>
       <td>
         <ol class="event-details">
           <li>
@@ -32,17 +17,6 @@
         </ol>
       </td>
     </tr>
-    <tr>
-      <th scope="row" class="hour">2PM</th>
-      <td>
-        <ol class="event-details">
-          <li>
-            <h4></h4>
-            <p></p>
-            <p></p>
-          </li>
-        </ol>
-      </td>
-    </tr>
+    }
   </tbody>
 </table>
