feat: refactor app structure to integrate router outlet and add settings page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 
   <app-menu-header [pageTitle]="'Barber Shop'"></app-menu-header>
-  <app-main></app-main>
+  <router-outlet></router-outlet>
   <app-menu-footer></app-menu-footer>
 
