--- a/src/app/components/menu-footer/menu-footer.component.html
+++ b/src/app/components/menu-footer/menu-footer.component.html
@@ -1,7 +1,7 @@
 <footer>
   <nav>
-    <a href="#"><span class="material-symbols-outlined"> home </span></a>
+    <a routerLink=""><span class="material-symbols-outlined"> home </span></a>
     <a href="#"><span class="material-symbols-outlined"> schedule </span></a>
-    <a href="#"><span class="material-symbols-outlined"> settings </span></a>
+    <a routerLink="/settings"><span class="material-symbols-outlined"> settings </span></a>
   </nav>
 </footer>
