--- a/src/app/components/settings-page/settings-page/settings-page.component.html
+++ b/src/app/components/settings-page/settings-page/settings-page.component.html
@@ -1,7 +1,6 @@
-<app-menu-header [pageTitle]="'Settings'"></app-menu-header>
 <main>
   <div class="barbericon">
-    <img src="#" alt="baber-shop-icon" />
+    <span class="material-symbols-outlined"> account_circle </span>
     <p>Barber Shop Name</p>
   </div>
   <app-tabs></app-tabs>
