--- a/src/app/components/settings-page/settings-page/settings-page.component.scss
+++ b/src/app/components/settings-page/settings-page/settings-page.component.scss
@@ -10,6 +10,7 @@ main {
   justify-content: center;
   align-items: center;
   padding: 10px;
+  color: var(--cor-secundaria);
 }
 
 .barbericon span{
@@ -17,6 +18,7 @@ main {
   width: 80px;
   line-height: 80px;
   font-size: 80px;
+  color: var(--cor-secundaria);
 }
 
 .barbericon p{
