--- a/src/app/components/register-page/client-register/client-register.component.html
+++ b/src/app/components/register-page/client-register/client-register.component.html
@@ -1,2 +1,59 @@
-<app-menu-header [pageTitle]="'Register'"></app-menu-header>
-<app-client-form></app-client-form>
+<main>
+  <div class="title">
+    <h1>Clients</h1>
+  </div>
+  <div class="container">
+    <form class="form">
+      <div class="row">
+        <div class="col-25">
+          <label for="clientId">Id</label>
+        </div>
+        <div class="col-75">
+          <input
+            type="text"
+            id="clientId"
+            name="clientId"
+            value="{{ client.id }}"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-25">
+          <label for="name">Name</label>
+        </div>
+        <div class="col-75">
+          <input type="text" id="name" name="name" value="{{ client.name }}" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-25">
+          <label for="email">E-mail</label>
+        </div>
+        <div class="col-75">
+          <input
+            type="text"
+            id="email"
+            name="email"
+            value="{{ client.email }}"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-25">
+          <label for="phone">Phone</label>
+        </div>
+        <div class="col-75">
+          <input
+            type="text"
+            id="phone"
+            name="phone"
+            value="{{ client.phone }}"
+          />
+        </div>
+      </div>
+      <div class="buttons">
+        <button type="submit" id="save-client" onclick="save()">Save</button>
+      </div>
+    </form>
+  </div>
+</main>
