--- a/src/app/components/settings-page/tabs/tabs.component.scss
+++ b/src/app/components/settings-page/tabs/tabs.component.scss
@@ -62,14 +62,20 @@
 
 .client-list{
   margin-top: 10px;
+  margin-left: 10px;
   padding: 10px;
   display: flex;
   min-height: 64px;
 }
 
-.client{
+ul .client-list .client{
+  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: baseline;
   align-content: space-around;
+}
+
+.client p{
+  margin-left: 10px;
 }
