--- a/src/app/components/menu-footer/menu-footer.component.html
+++ b/src/app/components/menu-footer/menu-footer.component.html
@@ -1,7 +1,11 @@
 <footer>
   <nav>
     <a routerLink=""><span class="material-symbols-outlined"> home </span></a>
-    <a routerLink="/schedules"><span class="material-symbols-outlined"> schedule </span></a>
-    <a routerLink="/settings"><span class="material-symbols-outlined"> settings </span></a>
+    <a routerLink="/clients" class="client" id="add-client">
+      <span class="material-symbols-outlined"> add_circle </span></a
+    >
+    <a routerLink="/settings"
+      ><span class="material-symbols-outlined"> settings </span></a
+    >
   </nav>
 </footer>
