feat: add client view component with routing and form for client details management

--- a/src/app/components/client-view/client-view.component.html
+++ b/src/app/components/client-view/client-view.component.html
@@ -1,1 +1,63 @@
-<p>client-view works!</p>
+<main>
+  <div class="title">
+    <h1>Clients</h1>
+  </div>
+  <div class="container">
+    <form class="form" [formGroup]="clientForm" (ngSubmit)="onSubmit()">
+      <div class="row">
+        <div class="col-25">
+          <label for="clientId">Id</label>
+        </div>
+        <div class="col-75">
+          <input
+            type="text"
+            id="clientId"
+            name="clientId"
+            value="{{ client.id }}"
+            formControlName = "clientId"
+            readonly
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-25">
+          <label for="name">Name</label>
+        </div>
+        <div class="col-75">
+          <input type="text" id="name" name="name" value="{{ client.name }}" formControlName="name"/>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-25">
+          <label for="email">E-mail</label>
+        </div>
+        <div class="col-75">
+          <input
+            type="text"
+            id="email"
+            name="email"
+            value="{{ client.email }}"
+            formControlName="email"
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-25">
+          <label for="phone">Phone</label>
+        </div>
+        <div class="col-75">
+          <input
+            type="text"
+            id="phone"
+            name="phone"
+            value="{{ client.phone }}"
+            formControlName= "phone"
+          />
+        </div>
+      </div>
+      <div class="buttons">
+        <button type="submit" id="update-client" [disabled]="!clientForm.valid">Register</button>
+      </div>
+    </form>
+  </div>
+</main>
